update growth chamber stuff

--- a/gc_layout.ipynb
+++ b/gc_layout.ipynb
@@ -249,7 +249,10 @@
     "print(\"Volume per strain:\", (ct_count*ml_per_dose)/strains,\"ml (\", \n",
     "      ((ct_count*ml_per_dose)/strains)/containers,\"ml each in\",containers,\"containers )\")\n",
     "\n",
-    "print(\"Total soil slurry needed:\", st_count*ml_per_dose,\"ml\")"
+    "print(\"Total soil slurry needed:\", st_count*ml_per_dose,\"ml\")\n",
+    "\n",
+    "water_per_day_per_pot = 0.5\n",
+    "\n"
    ]
   },
   {
